actually install the script
Signed-off-by: Mike O'Connor <stew@vireo.org>

--- a/debian/rules
+++ b/debian/rules
@@ -20,6 +20,8 @@ binary-indep:
 		       debian/tmp/usr/share/doc/movein \
 		       debian/tmp/DEBIAN
 
+	$(INSTALL_SCRIPT) movein debian/tmp/usr/bin
+
 	$(INSTALL_FILE) debian/changelog debian/tmp/usr/share/doc/movein/
 	$(INSTALL_FILE) debian/copyright debian/tmp/usr/share/doc/movein/
 
