fix path of debian changelog

--- a/debian/rules
+++ b/debian/rules
@@ -4,10 +4,8 @@ INSTALL_FILE    = install -p    -o root -g root  -m  644
 INSTALL_SCRIPT  = install -p    -o root -g root  -m  755
 INSTALL_DIR     = install -p -d -o root -g root  -m  755
 
-
 build: 
 binary-arch:
-
 
 clean:
 	-rm -fr debian/tmp
@@ -22,10 +20,10 @@ binary-indep:
 
 	$(INSTALL_SCRIPT) movein debian/tmp/usr/bin
 
-	$(INSTALL_FILE) debian/changelog debian/tmp/usr/share/doc/movein/
+	$(INSTALL_FILE) debian/changelog debian/tmp/usr/share/doc/movein/changelog.Debian
 	$(INSTALL_FILE) debian/copyright debian/tmp/usr/share/doc/movein/
 
-	gzip -9 debian/tmp/usr/share/doc/movein/changelog
+	gzip -9 debian/tmp/usr/share/doc/movein/changelog.Debian
 
 	cd debian/tmp && find * -type f ! -regex '^DEBIAN/.*' -print0 | xargs -r0 md5sum > DEBIAN/md5sums
 	dpkg-gencontrol -isp
